--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -2,7 +2,7 @@
 {% load sass_tags %}
 {% load admin_urls %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="gr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
