--- a/files/templates/files/file_list.html
+++ b/files/templates/files/file_list.html
@@ -1,24 +1,49 @@
 {% extends 'base.html' %}
-
 {% load static %}
-{#{% load taggit_templatetags2_tags %}#}
-{#{% get_taglist as tags %}#}
-
 
 {% block title %}Αποθετήριο{% endblock %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static 'css/select2.css' %}">
+{% endblock %}
 
 {% block content %}
 
     <!-- Search Bar -->
     {% include 'files/searchbar.html' %}
 
-
     <!-- SIDEBAR & CONTENT -->
     <div id="main-content" class="container-fluid">
+
         <div class="row py-3">
 
             <!-- SIDEBAR -->
             <nav class="col-4 sidebar">
+                <!-- ORDER BY -->
+                <table class="table table-light">
+                        <thead>
+                            <tr>
+                                <th scope="col">
+                                    Tαξινόμηση κατά:
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <select id="order" name="order">
+                                        <option value="date">Ημερομηνία Μεταφόρτωσης</option>
+                                        <option value="rating">Δημοτικότητα</option>
+                                        <option value="download">Αριθμός Μεταφορτώσεων</option>
+                                        <option value="comments">Αριθμός Σχόλιων</option>
+                                    </select>
+                                </td>
+                            </tr>
+                        </tbody>
+                </table>
+                <hr/>
+
+
                 <!-- TAGS -->
                 <table class="table table-light">
                         <thead>
@@ -89,6 +114,8 @@
 
 {% block extrascripts %}
     {{ block.super }}
+    <script src="{% static 'js/select2.js' %}"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
     <script id="myscript" src="{% static 'js/my.js' %}" caturl="{% url 'cat_ajax_tree' %}" areaurl="{% url 'area_ajax_tree' %}"></script>
 {% endblock %}
