--- a/files/templates/files/home.html
+++ b/files/templates/files/home.html
@@ -27,7 +27,7 @@
             <hr/>
             <div>
                 <h4>Ετικέτες:</h4>
-                {% include_tagcanvas 'id' '500' '200' '' 'files.file' %}
+                {% include_tagcanvas 'id' '500' '200' 'myurlname' 'files.file' %}
             </div>
             <hr/>
             <div class="container">
