finishing tags animation!

--- a/files/templates/files/file_list.html
+++ b/files/templates/files/file_list.html
@@ -31,7 +31,7 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <select id="order" name="order">
+                                    <select id="order" name="order" style="width: 100%">
                                         <option value="date">Ημερομηνία Μεταφόρτωσης</option>
                                         <option value="rating">Δημοτικότητα</option>
                                         <option value="download">Αριθμός Μεταφορτώσεων</option>
