--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -7,9 +7,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-{#    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">#}
 
-    <title>{% block title %}{% endblock %}</title>
+    <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../static/favicon.ico" type="image/x-icon">
+
+
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css"/>
@@ -20,18 +22,12 @@
     <link href="{% static 'css/autoSuggest.css' %}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
 
-
     <link rel="stylesheet" href="{% static 'css/proton/style.css' %}" />
-
-
-{#    <link href="{% static 'css/new.css' %}" rel="stylesheet" type="text/css">#}
-{#    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel=“stylesheet”>#}
-
 
     <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
 
 
-
+     <title>{% block title %}{% endblock %}</title>
     {% block head %}
     {% endblock %}
 </head>
