--- a/files/static/css/my.css
+++ b/files/static/css/my.css
@@ -27,8 +27,8 @@ a,
 br {
   color: black;
   font-family: 'Ubuntu', Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1;
+  font-size: 15px;
+    line-height: 1.3rem;
   margin-bottom: 0.5rem;
 
 }
@@ -55,9 +55,11 @@ h3 {
 }
 
 p {
-  margin-bottom: 1.5em;
-  /*color: #898989;*/
+    /*margin-bottom: 1.5em;*/
+    /*color: #898989;*/
     font-size: 16px;
+    line-height: 1.3rem;
+    text-align: justify;
 }
 
 b,
@@ -88,6 +90,48 @@ strong {
 
     padding: 20px;
 }
+
+
+/*-------------------------------------------
+                    Info
+---------------------------------------------*/
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: #ccc;
+}
+
+.accordion:after {
+  content: '\002B';
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
 
 /*-------------------------------------------
                     SIDEBAR & SIDEBAR CARDS
@@ -138,6 +182,11 @@ th {
     margin: 20px 0 20px 0;
     padding-bottom: 10px;
     padding-top: 20px;
+}
+
+.terms-content {
+    background-color: white;
+    padding: 20px 20px 10px;
 }
 
 .grid {
