--- a/files/templates/files/login.html
+++ b/files/templates/files/login.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
         {% endfor %}
-        <a href="/" class="forgot-password">Forgot your password?</a>
+{#        <a href="/" class="forgot-password">Forgot your password?</a>#}
     </div>
 
     <div class="modal-footer">
